--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/vite": "^4.1.3",
+    "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
