--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,17 @@
 DATABASE_URL='postgresql://ezservice_owner:npg_s1FqbDHY8XpO@ep-steep-poetry-a1chbv0g-pooler.ap-southeast-1.aws.neon.tech/ezservice?sslmode=require'
+TWILIO_ACCOUNT_SID='AC090fa159f00b41c4eec90837060a8e0e'
+TWILIO_AUTH_TOKEN='668fa5a6b2c47b2ef35a81d6b828624e'
+VERIFY_SERVICE_SID='VA4d6da112f9faf9a0fc720c5a9cf2facf'
+
+
+
+
+
+const accountSid = 'AC090fa159f00b41c4eec90837060a8e0e';
+const authToken = '668fa5a6b2c47b2ef35a81d6b828624e';
+const client = require('twilio')(accountSid, authToken);
+
+client.verify.v2.services("VA4d6da112f9faf9a0fc720c5a9cf2facf")
+      .verifications
+      .create({to: '+919726096807', channel: 'sms'})
+      .then(verification => console.log(verification.sid));
