--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "nodemon": "^3.1.10",
     "pg": "^8.15.5",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "twilio": "^5.5.2"
   },
   "scripts": {
     "start": "node app.js",
