building dashboard : ongoing

--- a/backend/.env
+++ b/backend/.env
@@ -2,6 +2,7 @@ DATABASE_URL='postgresql://ezservice_owner:npg_s1FqbDHY8XpO@ep-steep-poetry-a1ch
 TWILIO_ACCOUNT_SID='AC090fa159f00b41c4eec90837060a8e0e'
 TWILIO_AUTH_TOKEN='668fa5a6b2c47b2ef35a81d6b828624e'
 VERIFY_SERVICE_SID='VA4d6da112f9faf9a0fc720c5a9cf2facf'
+JWT_SECRET='ezserviceenckey042025'
 
 const accountSid = 'AC090fa159f00b41c4eec90837060a8e0e';
 const authToken = '668fa5a6b2c47b2ef35a81d6b828624e';
