--- a/backend/.env
+++ b/backend/.env
@@ -3,6 +3,11 @@ TWILIO_ACCOUNT_SID='AC090fa159f00b41c4eec90837060a8e0e'
 TWILIO_AUTH_TOKEN='668fa5a6b2c47b2ef35a81d6b828624e'
 VERIFY_SERVICE_SID='VA4d6da112f9faf9a0fc720c5a9cf2facf'
 JWT_SECRET='ezserviceenckey042025'
+# for Oauth
+GOOGLE_CLIENT_ID="157361431833-rbmajuscne9ind8tqq7oqkqloagl20qg.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
+GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
+SESSION_SECRET=your_random_secret
 
 const accountSid = 'AC090fa159f00b41c4eec90837060a8e0e';
 const authToken = '668fa5a6b2c47b2ef35a81d6b828624e';
