--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,8 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.15.5",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
