--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.0",
     "nodemon": "^3.1.10",
     "pg": "^8.15.5",
     "pg-hstore": "^2.3.4",
