Added upload image feature

--- a/backend/.env
+++ b/backend/.env
@@ -17,3 +17,5 @@ client.verify.v2.services("VA4d6da112f9faf9a0fc720c5a9cf2facf")
       .verifications
       .create({to: '+919726096807', channel: 'sms'})
       .then(verification => console.log(verification.sid));
+
+IMAGE_SOURCE=http://localhost:3000
