--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "js-cookie": "^3.0.5",
@@ -14,6 +15,7 @@
     "pg": "^8.15.5",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
+    "socket.io": "^4.8.1",
     "twilio": "^5.5.2"
   },
   "scripts": {
