--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-router-dom": "^7.5.0",
+    "socket.io-client": "^4.8.1",
     "zd": "^0.0.0",
     "zod": "^3.24.3"
   },
