update environment variables to use production API endpoint

--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,7 @@ JWT_SECRET='ezserviceenckey042025'
 # for Oauth
 GOOGLE_CLIENT_ID="157361431833-rbmajuscne9ind8tqq7oqkqloagl20qg.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
-GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
+GOOGLE_CALLBACK_URL=http://ec2-43-204-112-76.ap-south-1.compute.amazonaws.com/auth/google/callback
 SESSION_SECRET=your_random_secret
 
 const client = require('twilio')(TWILIO_ACCOUNT_SID, TWILIO_AUTH_TOKEN);
@@ -16,4 +16,4 @@ client.verify.v2.services("VA4d6da112f9faf9a0fc720c5a9cf2facf")
       .create({to: '+919726096807', channel: 'sms'})
       .then(verification => console.log("i am running"));
 
-IMAGE_SOURCE=http://localhost:3000
+IMAGE_SOURCE=http://ec2-43-204-112-76.ap-south-1.compute.amazonaws.com
