--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -37,3 +37,9 @@ build/
 # upload files
 uploads/*
 uploads/
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
